Nightly Windows ASAN Reporter bustage: src/ipc/glue/GeckoChildProcessHost.cpp(1023,14): error: unused variable 'isWidevine' [-Werror,-Wunused-variable]
Categories
(Core :: Audio/Video: Playback, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox65 | --- | unaffected |
firefox66 | --- | unaffected |
firefox67 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: cpearce)
References
Details
(Keywords: regression)
Attachments
(1 file)
#[markdown(off)]
Filed by: csabou [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=231015878&repo=mozilla-central
15:32:25 INFO - mozmake.EXE[4]: Leaving directory 'z:/task_1551366480/build/src/obj-firefox/ipc/mscom/oop'
15:32:25 INFO - mozmake.EXE[4]: Entering directory 'z:/task_1551366480/build/src/obj-firefox/ipc/glue'
15:32:25 INFO - z:/task_1551366480/build/src/clang/bin/clang.exe --driver-mode=cl -FoUnified_cpp_ipc_glue0.obj -c -Iz:/task_1551366480/build/src/obj-firefox/dist/stl_wrappers -DNDEBUG=1 -DTRIMMED=1 -DHAVE_UINT64_T -DWEBRTC_WIN -DHAVE_WINSOCK2_H -DWIN32_LEAN_AND_MEAN -D_WIN32 -DWIN32 -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DOS_WIN=1 -D_UNICODE -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DUNICODE -D_WINDOWS -D_SECURE_ATL -DCOMPILER_MSVC '-DMOZ_CHILD_PROCESS_NAME="plugin-container.exe"' '-DMOZ_CHILD_PROCESS_BUNDLE="plugin-container.app/Contents/MacOS/"' -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -Iz:/task_1551366480/build/src/ipc/glue -Iz:/task_1551366480/build/src/obj-firefox/ipc/glue -Iz:/task_1551366480/build/src/caps -Iz:/task_1551366480/build/src/dom/broadcastchannel -Iz:/task_1551366480/build/src/dom/indexedDB -Iz:/task_1551366480/build/src/dom/storage -Iz:/task_1551366480/build/src/media/webrtc/trunk -Iz:/task_1551366480/build/src/media/webrtc/trunk/webrtc -Iz:/task_1551366480/build/src/xpcom/build -Iz:/task_1551366480/build/src/dom/ipc -Iz:/task_1551366480/build/src/toolkit/crashreporter -Iz:/task_1551366480/build/src/toolkit/xre -Iz:/task_1551366480/build/src/xpcom/threads -Iz:/task_1551366480/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -Iz:/task_1551366480/build/src/ipc/chromium/src -Iz:/task_1551366480/build/src/ipc/glue -Iz:/task_1551366480/build/src/obj-firefox/dist/include -Iz:/task_1551366480/build/src/obj-firefox/dist/include/nspr -Iz:/task_1551366480/build/src/obj-firefox/dist/include/nss -MD -FI z:/task_1551366480/build/src/obj-firefox/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -guard:cf -U_FORTIFY_SOURCE -Xclang -fno-common -Qunused-arguments -fsanitize=address -fsanitize-blacklist=z:/task_1551366480/build/src/build/sanitizers/asan_blacklist_win.txt -fcrash-diagnostics-dir=z:/task_1551366480/public/build -fcrash-diagnostics-dir=/z/task_1551366480/public/build -TP -nologo -w15038 -wd5026 -wd5027 -Zc:sizedDealloc- -wd4091 -wd4577 -D_HAS_EXCEPTIONS=0 -guard:cf -U_FORTIFY_SOURCE -Xclang -fno-common -W3 -Gy -Zc:inline -wd4251 -wd4244 -wd4267 -wd4800 -wd4595 -wd4065 -Wno-inline-new-delete -Wno-invalid-offsetof -Wno-microsoft-enum-value -Wno-microsoft-include -Wno-unknown-pragmas -Wno-ignored-pragmas -Wno-deprecated-declarations -Wno-invalid-noreturn -Wno-inconsistent-missing-override -Wno-implicit-exception-spec-mismatch -Wno-unused-local-typedef -Wno-ignored-attributes -Wno-used-but-marked-unused -we4553 -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING -GR- -Z7 -Xclang -load -Xclang z:/task_1551366480/build/src/obj-firefox/build/clang-plugin/clang-plugin.dll -Xclang -add-plugin -Xclang moz-check -O2 -gline-tables-only -Oy- -WX -Xclang -MP -Xclang -dependency-file -Xclang .deps/Unified_cpp_ipc_glue0.obj.pp -Xclang -MT -Xclang Unified_cpp_ipc_glue0.obj z:/task_1551366480/build/src/obj-firefox/ipc/glue/Unified_cpp_ipc_glue0.cpp
15:32:25 INFO - In file included from z:/task_1551366480/build/src/obj-firefox/ipc/glue/Unified_cpp_ipc_glue0.cpp:74:
15:32:25 INFO - z:/task_1551366480/build/src/ipc/glue/GeckoChildProcessHost.cpp(1023,14): error: unused variable 'isWidevine' [-Werror,-Wunused-variable]
15:32:25 INFO - const bool isWidevine = isGMP && Contains(aExtraOpts, "gmp-widevinecdm");
15:32:25 INFO - ^
15:32:25 INFO - 1 error generated.
15:32:25 INFO - z:/task_1551366480/build/src/config/rules.mk:805: recipe for target 'Unified_cpp_ipc_glue0.obj' failed
15:32:25 INFO - mozmake.EXE[4]: *** [Unified_cpp_ipc_glue0.obj] Error 1
15:32:25 INFO - mozmake.EXE[4]: Leaving directory 'z:/task_1551366480/build/src/obj-firefox/ipc/glue'
15:32:25 INFO - mozmake.EXE[4]: *** Waiting for unfinished jobs....
15:32:25 INFO - mozmake.EXE[4]: Entering directory 'z:/task_1551366480/build/src/obj-firefox/hal'
15:32:25 INFO - mkdir -p '.deps/'
15:32:25 INFO - mozmake.EXE[4]: Leaving directory 'z:/task_1551366480/build/src/obj-firefox/hal'
15:32:26 INFO - mozmake.EXE[4]: Entering directory 'z:/task_1551366480/build/src/obj-firefox/hal'
15:32:26 INFO - hal/Hal.obj
Comment 1•2 years ago
|
||
Fallout from bug 1527811 it appears.
The place where isWidevine
would normally be used is behind ifdef MOZ_SANDBOX
, which the nightly asan reporter disables.
Assignee | ||
Comment 3•2 years ago
|
||
Pushed by cpearce@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f2d1cb9ce0c9 #ifdef out isWidevine if sandbox disabled in GeckoChildProcessHost.cpp. r=dmajor
Comment 5•2 years ago
|
||
bugherder |
Assignee | ||
Updated•2 years ago
|
Comment 6•2 years ago
|
||
This appears to have not fully fixed the issue. Now the builds are hitting a different Werror:
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=231227891&repo=mozilla-central&lineNumber=14513
INFO - ipc/glue/GeckoChildProcessHost.cpp(684,13): error: unused function 'Contains' [-Werror,-Wunused-function]
INFO - static bool Contains(const std::vector<std::string>& aExtraOpts,
Pushed by dmajor@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/a5009e4ff829 Fix more unused code -Werrors in GeckoChildProcessHost.cpp
Comment 8•2 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Description
•